--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Hi, I'm I.K.!</h1>
     <p>Hey there! I'm I.K., and I like art, robots, traveling, music, and reading!</p>
     <p>(Shank from Ralph Breaks the Internet is my spirit animal fr)</p>
+    <p>yeet</p>
   </body>
 </html>
