--- a/index.html
+++ b/index.html
@@ -5,11 +5,8 @@
   </head>
   <body>
     <img
-    src="https://cdn.mos.cms.futurecdn.net/gXZmAjxzz4XR3mLhsisH7W.png"
+    src="https://img0.reactor.cc/pics/post/full/Kanaya-Maryam-Homestuck-MS-Paint-Adventures-6246216.jpeg"
     />
-    <h1>Hi, I'm I.K.!</h1>
-    <p>Hey there! I'm I.K., and I like art, robots, traveling, movies, music, and reading!</p>
-    <p>(Shank from Ralph Breaks the Internet is my spirit animal fr)</p>
-    <p>:)</p>
+    <h1>i'm obsessed with her <3</h1>
   </body>
 </html>
