--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<head>
+    <link rel="stylesheet" href="style.css" />
+</head>
+
 <img
     src="https://steamuserimages-a.akamaihd.net/ugc/957460962297388324/A50967FA5C0659B19E294AA0F1FB5A984A040E31/?imw=512&&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=false"
     />
